--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'com.github.florent37:shapeofview:1.4.7'
+    implementation 'com.android.volley:volley:1.1.1'
 }
