--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation "com.github.skydoves:expandablelayout:1.0.5"
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
 }
