--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
