--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation files('libs/processing-core.jar')
 }
