--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StatsStateActivity"/>
+        <activity android:name=".TriviaResultActivity"></activity>
+        <activity android:name=".TriviaQuestionActivity" />
+        <activity android:name=".TriviaActivity" />
+        <activity android:name=".StatsStateActivity" />
         <activity android:name=".StatsIndiaActivity" />
         <activity android:name=".StatsWorldActivity" />
-        <activity android:name=".SplashScreenActivity"
+        <activity
+            android:name=".SplashScreenActivity"
             android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DashBoardActivity"/>
+        <activity android:name=".DashBoardActivity" />
     </application>
 
 </manifest>
