--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.hashbash.sangarodhak"
+        applicationId "team.hashbash.sangarodhak"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
